# pyCOCOS

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  docs-deploy.yml
docs/: Makefile  make.bat
docs/source/: api_reference.rst  conf.py  index.rst  numerics_implementation.rst  overview.rst  physics_implementation.rst
examples/: basic_usage.py  boozer_coordinates.py  eqdsk_io.py
src/pycocos/: __init__.py
src/pycocos/coordinates/: __init__.py  compute_coordinates.py  field_lines.py  jacobian_builders.py  jacobian_numba_kernels.py  jacobians.py  numba_runtime.py  registry.py
src/pycocos/core/: __init__.py  equilibrium.py  magnetic_coordinates.py
src/pycocos/gui/: __init__.py  app.py
src/pycocos/io/: __init__.py  cocos.py  eqdsk.py
src/pycocos/utils/: __init__.py  numba_utils.py
tests/: test_cocos.py  test_compute_coordinates.py  test_eqdsk_reader.py  test_gui_helpers.py  test_jacobians.py  test_magnetic_metric_access.py  test_magnetic_scalar_transform.py  test_numba_kernels.py  test_numba_runtime.py
